--- a/index.html
+++ b/index.html
@@ -469,36 +469,36 @@
             <use href="./images/icons-sprite-opti.svg#icon-close-btn"></use>
           </svg>
         </button>
-        <!-- Modal -->
+        <!-- Form -->
         <form class="form-modal">
           <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
           <div class="form-field">
             <label for="name">Имя</label>
             <div class="input-position">
-              <input type="text" name="name" id="name" />
-              <svg class="icon" width="18" height="18">
-              <use href="./images/icons-sprite-opti.svg#icon-person"></use>
-            </svg>
+              <input type="text" name="name" id="name" class="form-modal-input" />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons-sprite-opti.svg#icon-person"></use>
+              </svg>
             </div>
           </div>
           <div class="form-field">
             <label for="tel">Телефон</label>
             <div class="input-position">
-              <input type="number" name="tel" id="tel" />
-              <svg class="icon" width="18" height="18">
-              <use href="./images/icons-sprite-opti.svg#icon-phone"></use>
-            </svg>
+              <input type="number" name="tel" id="tel" class="form-modal-input" />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons-sprite-opti.svg#icon-phone"></use>
+              </svg>
             </div>
           </div>
           <div class="form-field">
             <label for="email">Почта</label>
             <div class="input-position">
-              <input type="text" name="email" id="email" />
-              <svg class="icon" width="18" height="18">
-              <use href="./images/icons-sprite-opti.svg#icon-email"></use>
-            </svg>
+              <input type="email" name="email" id="email" class="form-modal-input" />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons-sprite-opti.svg#icon-email"></use>
+              </svg>
             </div>
-          </div class="form-field">
+          </div>
           <div class="form-field">
             <label for="comment">Комментарий</label>
             <textarea
