--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         </div>
         <form class="form-sign-up">
           <div class="form-email">
-            <label for="email" class="form-label">Подпишитесь на рассылку</label>
+            <label for="email">Подпишитесь на рассылку</label>
             <input type="email" name="email" id="email" class="form-input" placeholder="E-mail" />
           </div>
           <button type="submit" class="form-button">
@@ -491,9 +491,9 @@
             </div>
           </div>
           <div class="form-field">
-            <label for="email">Почта</label>
+            <label for="mail">Почта</label>
             <div class="input-position">
-              <input type="email" name="email" id="email" class="form-modal-input" />
+              <input type="email" name="mail" id="mail" class="form-modal-input" />
               <svg class="form-icon" width="18" height="18">
                 <use href="./images/icons-sprite-opti.svg#icon-email"></use>
               </svg>
@@ -509,7 +509,17 @@
               class="form-textarea"
             ></textarea>
           </div>
-          <label>Соглашаюсь с рассылкой и принимаю Условия договора</label>
+          <label class="label">
+            <input class="checkbox" type="checkbox" name="agree" value="agree" />
+            <span class="agree-icon">
+              <svg width="16" height="15">
+                <use href="./images/icons-sprite-opti.svg#icon-tick"></use>
+              </svg>
+            </span>
+            Соглашаюсь с рассылкой и принимаю
+            <a href="" class="link-contract">Условия договора</a>
+          </label>
+          <button type="button" class="form-button">Отправить</button>
         </form>
       </div>
     </div>
