Вносит изменения в модальное окно
+
убирает пробивающие маржины
убирает с кнопки ширину и высоту в подписке, а добавляет падинги

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-field">
+          <div class="form-field textarea">
             <label for="comment">Комментарий</label>
             <textarea
               name="comment"
